# utility

./: .gitignore  README.md  git-park
giftool/: LICENSE  README.md  install-clipflip  install-deps  requirements.txt  setup.cfg
giftool/packaging/: build-release  clipflip.desktop  install-desktop-entry
git-park/: README.md
git-recent/: README.md
