[metadata]
name = clipflip-studio
version = 0.1.0
description = Local GIF/video trimming, conversion, annotation, and comparison app.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
author = Andy Park
author_email = andypark.purdue@gmail.com
url = https://github.com/robodreamer/utility/tree/main/giftool
project_urls =
    Repository = https://github.com/robodreamer/utility
    Issues = https://github.com/robodreamer/utility/issues
classifiers =
    Development Status :: 3 - Alpha
    Environment :: X11 Applications
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Topic :: Multimedia :: Video

[options]
python_requires = >=3.10
packages =
install_requires =
    nicegui>=3.10,<4
    Pillow>=9
scripts =
    bin/clipflip
    bin/clipflip-convert
    bin/giftool-ui
    bin/converttool
    bin/giftool
    bin/videotool
    bin/giftool-gui

[options.extras_require]
native =
    pywebview>=5

[options.data_files]
share/applications =
    packaging/clipflip.desktop
share/icons/hicolor/scalable/apps =
    assets/clipflip.svg
